<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textViewEnterPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/text_section_sysstats" />

    <Switch
        android:id="@+id/sysStatsMemInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/text_switch_meminfo"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textOff="OFF"
        android:textOn="ON"
        android:checked="true" />

    <Switch
        android:id="@+id/sysStatsProcrank"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/text_switch_procrank"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textOff="OFF"
        android:textOn="ON"
        android:checked="true" />

    <Switch
        android:id="@+id/sysStatsTopLog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/text_switch_toplog"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textOff="OFF"
        android:textOn="ON"
        android:checked="true" />

    <Switch
        android:id="@+id/sysStatsCpuLoad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/text_switch_cpuload"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textOff="OFF"
        android:textOn="ON"
        android:checked="true" />

</LinearLayout>
